--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Site Title"
+locale                   : "ko-KR"
+title                    : "소주6잔 블로그"
 title_separator          : "-"
 name                     : "soju6jan"
-description              : "An amazing website."
+description              : "-----"
 url                      : "https://soju6jan.github.io"
 baseurl                  : ""# the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
