--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: github 설명 블로그 #A virtual proof that name is awesome!
 
 # List of links in the navigation bar
 navbar-links:
-  #About Me: "aboutme"
+  About Me: "aboutme"
   #Resources:
   #  - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
   #  - Learn markdown: "http://www.markdowntutorial.com/"
@@ -72,7 +72,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "cybersol@naver.com
+  email: "cybersol@naver.com"
   facebook: #daattali
   github: #daattali
   twitter: #daattali
