--- a/_config.yml
+++ b/_config.yml
@@ -13,20 +13,20 @@ url:                 https://soju6jan.github.io
 baseurl:             ""
 
 # A very short description of your page
-tagline:             직업은 따로 있습니다.
+tagline:             
 
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
 description:         >
-  몇가지 만든 거 올리는 곳
+  #
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
-  name:              soju6jan
-  email:             cybersol@naver.com
+  name:              #soju6jan
+  email:             #cybersol@naver.com
 
 # Fallback image and color
-image:               /assets/img/nap.jpg
+image:               #/assets/img/nap.jpg
 color:               '#4f86aa'
 
 # The font used for headings. Expects a string that is a valid CSS font-family value.
