--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #  User configuration
 # -----------------------------------------------------------------------------
 
-title:               Soju6jan
+title:               Soju6jan's Blog
 
 # The unique resource location of your page.
 # Set to `https://<username>.github.io` when hosting on GitHub Pages
@@ -18,11 +18,11 @@ tagline:
 # A short description of the page, used in the sidebar and as fallback for the meta description tag.
 # Markdown enabled, but don't use more than one paragraph (enforced by `>`)
 description:         >
-  #
+
 
 # This should be the same author as first entry in `_data/authors.yml`
 author:
-  name:              #soju6jan
+  name:              soju6jan
   email:             #cybersol@naver.com
 
 # Fallback image and color
